menu page progress

--- a/app/menu.html
+++ b/app/menu.html
@@ -42,6 +42,7 @@
     </div>
   </nav>
 </header>
+
 <section id="menu" class="mt-16 md:mt-24">
   <div class="container">
     <div class="max-w-md mx-auto text-center">
@@ -49,14 +50,66 @@
       <h4 class="capitalize text-xl text-secondaryColor py-3 ">Craving some delicious and satisfying fast food? Look no further than Craving Corner!</h4>
       <div class="separator mx-auto"></div>
       <p class="paragraph"> We offer a wide variety of menu items to tantalize your taste buds, from juicy burgers and crispy fries to refreshing salads and decadent desserts.</p>
-      <div>
+      <div class="tabs">
         <ul class="flex flex-wrap justify-center gap-3 py-10">
-          <li>All</li>
-          <li>Food</li>
-          <li>Snack</li>
-          <li>Beverage</li>
+          <li class="btn bg-primaryColorLight active">All</li>
+          <li class="btn bg-primaryColorLight">Food</li>
+          <li class="btn bg-primaryColorLight">Snack</li>
+          <li class="btn bg-primaryColorLight">Beverage</li>
         </ul>
       </div>
+    </div>
+
+
+    <div>
+      <ul class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4 lg:gap-12">
+        <!-- food -->
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">regular bean burger</h4>
+              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">regular bean burger</h4>
+              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">regular bean burger</h4>
+              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">regular bean burger</h4>
+              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        
+      </ul>
     </div>
   </div>
 </section>
