--- a/app/menu.html
+++ b/app/menu.html
@@ -64,50 +64,120 @@
     <div>
       <ul class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-4 lg:gap-12">
         <!-- food -->
+      
         <li>
           <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
 
           <div class="pt-5">
             <div class="mb-2">
               <h4 class="card_title">regular bean burger</h4>
-              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+              <p class="paragraph">A classic fast food item, burgers are typically made with a ground beef patty, cheese, lettuce, tomato, onion, and pickles on a bun.</p>
             </div>
             <p class="text-secondaryColor">$50.00</p>
           </div>
         </li>
         <li>
-          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food2.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
 
           <div class="pt-5">
             <div class="mb-2">
-              <h4 class="card_title">regular bean burger</h4>
-              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+              <h4 class="card_title">Classic pizza</h4>
+              <p class="paragraph">A savory dish made with a round dough base topped with tomato sauce, cheese, and often sliced into wedges and eaten by hand</p>
             </div>
             <p class="text-secondaryColor">$50.00</p>
           </div>
         </li>
         <li>
-          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food3.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
 
           <div class="pt-5">
             <div class="mb-2">
-              <h4 class="card_title">regular bean burger</h4>
-              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+              <h4 class="card_title">Burritos</h4>
+              <p class="paragraph">A large flour tortilla filled with meat, beans, cheese, rice, and other toppings. Burritos are typically wrapped and eaten by hand.</p>
             </div>
             <p class="text-secondaryColor">$50.00</p>
           </div>
         </li>
         <li>
-          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food1.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food4.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
 
           <div class="pt-5">
             <div class="mb-2">
-              <h4 class="card_title">regular bean burger</h4>
-              <p class="paragraph">Don't overthink it! Grab a burger that never gets old, bursting with flavor and pure comfort.</p>
+              <h4 class="card_title">Tacos</h4>
+              <p class="paragraph">A Mexican dish made with a small corn tortilla filled with meat, cheese, vegetables, and salsa. Tacos are typically eaten by hand.</p>
             </div>
             <p class="text-secondaryColor">$50.00</p>
           </div>
         </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food5.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">Hot dogs</h4>
+              <p class="paragraph">A sausage served in a long roll with bread. Hot dogs are often topped with ketchup, mustard, relish, onions and various toppings</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/food6.png" alt="food_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">Fried chicken</h4>
+              <p class="paragraph">Chicken has been coated in breading and then deep-fried often served with dipping sauces such as ranch dressing or hot sauce.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+
+        <!-- snack -->
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/snack1.png" alt="snack_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">Fried chicken</h4>
+              <p class="paragraph">Chicken has been coated in breading and then deep-fried often served with dipping sauces such as ranch dressing or hot sauce.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/snack2.png" alt="snack_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">Fried chicken</h4>
+              <p class="paragraph">Chicken has been coated in breading and then deep-fried often served with dipping sauces such as ranch dressing or hot sauce.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/snack3.png" alt="snack_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">Fried chicken</h4>
+              <p class="paragraph">Chicken has been coated in breading and then deep-fried often served with dipping sauces such as ranch dressing or hot sauce.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+        <li>
+          <div class="h-56 grid place-items-center bg-primaryColorLight rounded-3xl hover:bg-secondaryColor ease-linear duration-200 lg:h-40"><img src="../images/home page/snack4.png" alt="snack_img" class="w-48 hover:scale-110 ease-linear duration-200 md:w-56 lg:w-32"></div>
+
+          <div class="pt-5">
+            <div class="mb-2">
+              <h4 class="card_title">Fried chicken</h4>
+              <p class="paragraph">Chicken has been coated in breading and then deep-fried often served with dipping sauces such as ranch dressing or hot sauce.</p>
+            </div>
+            <p class="text-secondaryColor">$50.00</p>
+          </div>
+        </li>
+
         
       </ul>
     </div>
