--- a/app/contact.html
+++ b/app/contact.html
@@ -42,3 +42,38 @@
       </div>
     </nav>
   </header>
+  <section id="contact" class="bg-secondaryColor">
+    <div class="container flex flex-col gap-5 mb-10 md:items-center md:flex-row">
+      <div class="space-y-4 md:flex-1">
+        <h2 class="section_title text-blackColor">get exclusive updates</h2>
+        <p class="text-sm">stay connected and taste the heavenly food.</p>
+      </div>
+      <div class="flex flex-col gap-3 md:flex-row md:flex-1">
+        <input type="email" placeholder="Email address" class="p-2 text-blackColor rounded-lg outline-none md:w-full">
+        <a href="" class="bg-blackColor rounded-lg p-2 gap-2 items-center justify-center btn flex hover:opacity-75"><i class="fa-solid fa-paper-plane"></i>Subscribe</a>
+      </div>
+    </div>
+  </section>
+    <!-- comments -->
+    <section>
+    <div class="bg-primaryColor container ">
+      <form action="" class="flex flex-col gap-5 text-blackColor md:grid md:grid-cols-2 md:justify-start md:items-center">
+
+        <p class="card_title text-secondaryColor">Name:</p><input type="text" name="name" id="name" class="rounded-md mx-4 h-10 text-center" placeholder="Enter your name">
+
+        <p class="card_title text-secondaryColor">designation:</p><input type="text" name="name" id="name" class="rounded-md mx-4 h-10 text-center" placeholder="Enter your designation ">
+
+        <p class="card_title text-secondaryColor">e-mail:</p><input type="email" name="name" id="name" class="rounded-md mx-4 h-10 text-center" placeholder="E-mail address">
+        <p class="card_title text-secondaryColor">comment here:</p><textarea name="" id="" cols="10" rows="5" class="rounded-md text-center p-4 mx-4" placeholder="write your thoughts here..."></textarea>
+
+        <div class="flex flex-row gap-x-10 mx-auto my-6">
+          <input type="reset" value="Refresh" class="btn btn-primary text-base font-nunito font-semibold">
+          <input type="submit" value="Comment" class="btn btn-primary text-base font-nunito font-semibold">
+        </div>
+      </form>
+    </div>
+  </section>
+  <!-- main.js -->
+<script src="./main.js"></script>
+</body>
+</html>
