--- a/app/contact.html
+++ b/app/contact.html
@@ -87,9 +87,57 @@
               <a href="" class="text-4xl font-oswald uppercase">
                 Bur<span class="text-secondaryColor">ger</span>
               </a>
-              <p>
-                
+              <p class="text-xs">
+                Craving more? Follow us on social media for drool-worthy pics, exclusive deals, and behind-the-scenes fun!
               </p>
+            </div>
+          </li>
+
+          <li>
+            <div class="flex flex-col gap-3">
+              <h3 class="text-lg uppercase font-oswald">support</h3>
+              <a href="" class="text-xs hover:text-secondaryColor">FAQ's</a>
+              <a href="" class="text-xs hover:text-secondaryColor">Privacy Policy</a>
+              <a href="" class="text-xs hover:text-secondaryColor">Terms & Conditions</a>
+              <a href="" class="text-xs hover:text-secondaryColor">Contact</a>
+            </div>
+          </li>
+
+          <li class="space-y-8">
+            <div class="space-y-2">
+              <h3 class="text-lg uppercase font-oswald">phone</h3>
+              <p class="flex items-center gap-2 text-xs ">
+                <i class="fa-solid fa-phone text-secondaryColor text-lg"></i>
+                +91 9994846000
+              </p>
+            </div>
+          </li>
+          <li class="space-y-8">
+            <div class="space-y-2">
+              <h3 class="text-lg uppercase font-oswald">email</h3>
+              <p class="flex items-center gap-2 text-xs ">
+                <i class="fa-solid fa-envelope text-secondaryColor text-lg"></i>
+                mehatajm.2002@gmail.com
+              </p>
+            </div>
+          </li>
+          <li class="space-y-8">
+            <div class="space-y-2">
+              <h3 class="text-lg uppercase font-oswald">address</h3>
+              <p class="flex items-center gap-2 text-xs ">
+                <i class="fa-solid fa-location-dot text-secondaryColor text-lg"></i>
+                80 A/1 Lakshmipathi Nagar, Panruti.
+              </p>
+            </div>
+
+            <div class="space-y-2">
+              <h3 class="text-lg uppercase font-oswald">follow us</h3>
+
+              <div class="space-y-3">
+                <i class="fa-brands fa-facebook-f text-secondaryColor text-lg cursor-pointer hover:-translate-y-1 ease-in duration-200"></i>
+                <i class="fa-brands fa-twitter text-secondaryColor text-lg"></i>
+                <i class="fa-brands fa-instagram text-secondaryColor text-lg"></i>
+              </div>
             </div>
           </li>
         </ul>
