--- a/app/contact.html
+++ b/app/contact.html
@@ -81,7 +81,7 @@
 <footer>
     <section id="footer">
       <div class="container">
-        <ul class="grid grid-cols-1 items-start gap-5 pb-5 md:grid-cols-2">
+        <ul class="grid grid-cols-1 items-start gap-5 pb-5 md:grid-cols-2 lg:grid-cols-4 ">
           <li>
             <div class="space-y-3">
               <a href="" class="text-4xl font-oswald uppercase">
@@ -105,6 +105,38 @@
 
           <li class="space-y-8">
             <div class="space-y-2">
+              <h3 class="text-lg uppercase font-oswald">email</h3>
+
+              <p class="flex items-center gap-2 text-xs ">
+                <i class="fa-solid fa-envelope text-secondaryColor text-lg"></i>
+                mehatajm.2002@gmail.com
+              </p>
+            </div>
+          </li>
+
+          <li class="space-y-8">
+            <div class="space-y-2">
+              <h3 class="text-lg uppercase font-oswald">address</h3>
+
+              <p class="flex items-center gap-2 text-xs ">
+                <i class="fa-solid fa-location-dot text-secondaryColor text-lg"></i>
+                80 A/1 Lakshmipathi Nagar.
+              </p>
+            </div>
+
+            <div class="space-y-2">
+              <h3 class="text-lg uppercase font-oswald">follow us</h3>
+
+              <div class="space-x-3">
+                <i class="fa-brands fa-facebook-f text-secondaryColor text-lg cursor-pointer hover:-translate-y-1 ease-in duration-200"></i>
+                <i class="fa-brands fa-twitter text-secondaryColor text-lg cursor-pointer hover:-translate-y-1 ease-in duration-200"></i>
+                <i class="fa-brands fa-instagram text-secondaryColor text-lg cursor-pointer hover:-translate-y-1 ease-in duration-200"></i>
+              </div>
+            </div>
+          </li>
+
+          <li class="space-y-8">
+            <div class="space-y-2">
               <h3 class="text-lg uppercase font-oswald">phone</h3>
               <p class="flex items-center gap-2 text-xs ">
                 <i class="fa-solid fa-phone text-secondaryColor text-lg"></i>
@@ -112,35 +144,14 @@
               </p>
             </div>
           </li>
-          <li class="space-y-8">
-            <div class="space-y-2">
-              <h3 class="text-lg uppercase font-oswald">email</h3>
-              <p class="flex items-center gap-2 text-xs ">
-                <i class="fa-solid fa-envelope text-secondaryColor text-lg"></i>
-                mehatajm.2002@gmail.com
-              </p>
-            </div>
-          </li>
-          <li class="space-y-8">
-            <div class="space-y-2">
-              <h3 class="text-lg uppercase font-oswald">address</h3>
-              <p class="flex items-center gap-2 text-xs ">
-                <i class="fa-solid fa-location-dot text-secondaryColor text-lg"></i>
-                80 A/1 Lakshmipathi Nagar, Panruti.
-              </p>
-            </div>
 
-            <div class="space-y-2">
-              <h3 class="text-lg uppercase font-oswald">follow us</h3>
-
-              <div class="space-y-3">
-                <i class="fa-brands fa-facebook-f text-secondaryColor text-lg cursor-pointer hover:-translate-y-1 ease-in duration-200"></i>
-                <i class="fa-brands fa-twitter text-secondaryColor text-lg"></i>
-                <i class="fa-brands fa-instagram text-secondaryColor text-lg"></i>
-              </div>
-            </div>
-          </li>
+         
+          
         </ul>
+        <div class="flex flex-col items-center border-t border-primaryColorLight py-5 md:flex-row md:justify-between">
+          <p class="paragraph">Food Template kit by Light code</p>
+          <p class="paragraph">Copyright © 2024. All rights reserved.</p>
+        </div>
       </div>
     </section>
 </footer>
